styles.css
/* ... */
.theme-light {
	--dynamic-outline-shadow-color: rgba(99, 99, 99, 0.2);
}

.theme-dark {
	--dynamic-outline-shadow-color: rgba(0, 0, 0, 0.2);
}

#dynamic-outline,
#dynamic-outline ul,
#dynamic-outline li {
	margin: 0;
	padding: 0;
	list-style: none;
}

.setting-item.is-disabled {
	pointer-events: none;
	opacity: 0.5;
}

/* 
 * Dynamic Outline Window
 */

#dynamic-outline {
	position: absolute;
	display: flex;
	flex-direction: column;
	z-index: var(--layer-popover);

	top: var(--dynamic-outline-top);
	max-height: calc(
		100% - var(--dynamic-outline-top) - var(--dynamic-outline-bottom)
	);

	width: var(--dynamic-outline-window-width);
	/* padding: 10px 0 5px; */
	padding: 5px 0 5px;
	right: 20px;

	font-size: var(--dynamic-outline-font-size);

	background-color: var(--dynamic-outline-background);
	border: 1px solid var(--dynamic-outline-border-color);
	border-radius: 12px;
	box-shadow: var(--dynamic-outline-shadow-color) 0px 2px 8px 0px;

	opacity: var(--dynamic-outline-opacity);
}

#dynamic-outline.hidden {
	display: none;
}

/* Corner case for the Editing Toolbar plugin */
.view-content
	> .markdown-source-view[style=""]
	~ #dynamic-outline.obstruction-top {
	top: var(--dynamic-outline-top-editing-toolbar);
	max-height: calc(
		100% - var(--dynamic-outline-top-editing-toolbar) -
			var(--dynamic-outline-bottom)
	);
}

#dynamic-outline.location-left {
	right: unset;
	left: 20px;
}

#dynamic-outline:hover {
	opacity: 1;
}

button.dynamic-outline-reload[disabled] {
	display: none;
}

/* 
 * Dynamic Outline Search Container
 */

.dynamic-outline-search-container.hidden {
	display: none;
}

.dynamic-outline-search-container {
	display: flex;
	align-items: center;

	margin-top: 5px;
	margin-bottom: 5px;
}

.dynamic-outline-search-container::before {
	display: block;
	content: "";
	height: var(--search-icon-size);
	width: var(--search-icon-size);
	position: absolute;
	inset-inline-start: 22px;
	background-color: var(--search-icon-color);
	-webkit-mask-image: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='none' stroke='currentColor' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'><circle cx='11' cy='11' r='8'></circle><line x1='21' y1='21' x2='16.65' y2='16.65'></line></svg>");
	-webkit-mask-repeat: no-repeat;
}

/* Tweak pixels */
.dynamic-outline-search-container input {
	display: block;
	width: 100%;
	padding-inline-start: 32px;
}

.dynamic-outline-search-container input.has-content {
	padding-inline-end: 32px;
}

.dynamic-outline-search-clear-button {
	display: none;
	margin: 0;
	top: calc((var(--input-height) - var(--search-icon-size)) + 6px);
	right: 10px;
}

.dynamic-outline-search-clear-button.visible {
	display: block;
}

/* 
 * Dynamic Outline Content Container
 */

.dynamic-outline-search-container.hidden ~ .dynamic-outline-content-container {
	margin-top: 10px;
	margin-bottom: 5px;
}

.dynamic-outline-content-container {
	overflow-y: auto;
	padding: 0 15px;
}

.dynamic-outline-search-container {
	padding: 0 15px;
}

/* 
 * Dynamic Outline List Items
 */

#dynamic-outline li {
	display: flex;
	align-items: flex-start;

	padding: 7px 0;
	margin: 1px 0;
	transition: background 25ms linear;
	cursor: pointer;

	border-radius: 6px;
}

#dynamic-outline li:hover,
#dynamic-outline li.highlight:hover,
#dynamic-outline li.hovered,
#dynamic-outline li.highlight.hovered {
	background-color: var(--dynamic-outline-background-hover);
}

#dynamic-outline li.highlight {
	position: relative;
	background-color: var(--dynamic-outline-active-heading-background);
}

#dynamic-outline li.highlight::after {
	content: "";
	position: absolute;

	inset-inline-start: -8px;
	width: 4px;
	background-color: var(--dynamic-outline-active-heading-pill-color);
	border-radius: 8px;

	/*
	 * Center the highlight indicator vertically.
	 */
	top: 50%;
	transform: translateY(-50%);
	height: 22px;
}

#dynamic-outline li a {
	padding: 0px 8px;
	color: var(--dynamic-outline-text-color);
	text-decoration: none;
}

#dynamic-outline li .heading-level-1 {
	color: var(--dynamic-outline-h1-text-color);
	font-weight: var(--dynamic-outline-h1-font-weight);
	font-style: var(--dynamic-outline-h1-font-style);
	font-variant: var(--dynamic-outline-h1-font-variant);
}

#dynamic-outline li .heading-level-2 {
	color: var(--dynamic-outline-h2-text-color);
	font-weight: var(--dynamic-outline-h2-font-weight);
	font-style: var(--dynamic-outline-h2-font-style);
	font-variant: var(--dynamic-outline-h2-font-variant);
}

#dynamic-outline li .heading-level-3 {
	color: var(--dynamic-outline-h3-text-color);
	font-weight: var(--dynamic-outline-h3-font-weight);
	font-style: var(--dynamic-outline-h3-font-style);
	font-variant: var(--dynamic-outline-h3-font-variant);
}

#dynamic-outline li .heading-level-4 {
	color: var(--dynamic-outline-h4-text-color);
	font-weight: var(--dynamic-outline-h4-font-weight);
	font-style: var(--dynamic-outline-h4-font-style);
	font-variant: var(--dynamic-outline-h4-font-variant);
}

#dynamic-outline li .heading-level-5 {
	color: var(--dynamic-outline-h5-text-color);
	font-weight: var(--dynamic-outline-h5-font-weight);
	font-style: var(--dynamic-outline-h5-font-style);
	font-variant: var(--dynamic-outline-h5-font-variant);
}

#dynamic-outline li .heading-level-6 {
	color: var(--dynamic-outline-h6-text-color);
	font-weight: var(--dynamic-outline-h6-font-weight);
	font-style: var(--dynamic-outline-h6-font-style);
	font-variant: var(--dynamic-outline-h6-font-variant);
}

#dynamic-outline li.highlight .heading-level-1 {
	font-weight: max(
		var(--dynamic-outline-h1-font-weight),
		var(--dynamic-outline-highlight-font-weight)
	); /* Preserve the maximum font weight on highlight. */
}

#dynamic-outline li.highlight .heading-level-2 {
	font-weight: max(
		var(--dynamic-outline-h2-font-weight),
		var(--dynamic-outline-highlight-font-weight)
	); /* Preserve the maximum font weight on highlight. */
}
/* ... */

